--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,14 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>webservices.rest-omod</artifactId>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+
 	<repositories>
 		<repository>
 			<id>openmrs-repo</id>
